# ExpSetUP

./: .gitignore  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  pyproject.toml  verify_installation.py
.github/workflows/: tests.yml
examples/: README.md  advanced_usage.py  basic_usage.py  resume_training.py
expsetup/: __init__.py  checkpoint_manager.py  config.py  logger.py
tests/: __init__.py  test_checkpoint_manager.py  test_config.py  test_logger.py
